// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render NoteSearchArea component correctly with empty searchTerm 1`] = `
<div>
  <input
    className="input input"
    onChange={[Function]}
    placeholder="Search in notes"
    type="text"
    value=""
  />
</div>
`;

exports[`Should render NoteSearchArea component correctly with searchTerm provided 1`] = `
<div>
  <input
    className="input input"
    onChange={[Function]}
    placeholder="Search in notes"
    type="text"
    value="pizza"
  />
</div>
`;
